--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,1 +1,34 @@
 /* Soluzione qui */
+
+@media screen and (min-width: 768px) {
+    #topbar {
+        display: inline;
+        font-size: large;
+    }
+
+    main {
+        padding: 40px;
+    }
+
+    .recipe-origin {
+        display: inline;
+        color: #4e3969;
+        font-weight: 800;
+    }
+
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 768px;
+    }
+
+    .btn, .ads {
+        display: inline;
+        width: 100px;
+        margin-bottom: 15px;
+    }
+
+    img {
+        float: left;
+    }
+}
